Minor tweaks to outerthemes. Proceeding with renaming to GWtheme.

--- a/GWtheme/beamerfontthemeGW.sty
+++ b/GWtheme/beamerfontthemeGW.sty
@@ -1,4 +1,4 @@
-%% start of file `beamerfontthemeMPI.sty'.
+%% start of file `beamerfontthemeGW.sty'.
 % Author: Max Melching (m-melching@web.de), 2025
 %
 % Acknowledgements: this theme is a based on the UC Berkeley beamer theme. The file structure, however, follows the DTU template from https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
