--- a/GWtheme/beamerinnerthemeGW.sty
+++ b/GWtheme/beamerinnerthemeGW.sty
@@ -1,4 +1,4 @@
-%% start of file `beamerinnerthemeMPI.sty'.
+%% start of file `beamerinnerthemeGW.sty'.
 % Author: Max Melching (m-melching@web.de), 2025
 %
 % Acknowledgements: this theme is a based on the UC Berkeley beamer theme. The file structure, however, follows the DTU template from https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
@@ -30,7 +30,7 @@
 
 % -- Section and subsection page ----------
 % -> adapted from: https://github.com/pcafrica/focus-beamertheme/blob/main/beamerinnerthemefocus.sty
-\defbeamertemplate*{section page}{MPI}{%
+\defbeamertemplate*{section page}{GW}{%
     {%
         \begin{tikzpicture}[overlay, remember picture]
             \usebeamercolor[bg]{section page}
@@ -55,7 +55,7 @@
 }
 
 
-\defbeamertemplate*{subsection page}{MPI}{%
+\defbeamertemplate*{subsection page}{GW}{%
     {%
         \begin{tikzpicture}[overlay, remember picture]
             \usebeamercolor[bg]{subsection page}
@@ -99,87 +99,29 @@
 
 % \setbeamertemplate{title page}[default][left]
 
-% \setbeamertemplate{title page}{
-%   % % \begin{minipage}{0.3\textwidth}%
-%   % %     \includegraphics[width=0.3\textwidth]{pictures/aeilogo.png}
-%   % % \end{minipage}%
-%   % % \begin{minipage}{0.3\textwidth}%
-%   % %     \includegraphics[0.3\textwidth]{pictures/group_logo.png}
-%   % % \end{minipage}%
-%   % % \begin{minipage}{0.3\textwidth}%
-%   % %     \includegraphics[0.3\textwidth]{pictures/logo_luh.jpg}
-%   % % \end{minipage}%
-%   % \begin{figure}[h]
-%   %   \centering
-%   %   % \subfloat{\includegraphics[height=2.5\baselineskip]{pictures/aeilogo.png}}\hspace*{0.15\textwidth}
-%   %   % \subfloat{\includegraphics[height=2.5\baselineskip]{pictures/MPI-AEI_hoch_D_color_rgb-1.png}}\hspace*{0.1\textwidth}
-%   %   % \subfloat{\includegraphics[height=2.5\baselineskip]{pictures/group_logo.png}}\hspace*{0.1\textwidth}
-%   %   % \subfloat{\includegraphics[height=2\baselineskip]{pictures/logo_luh.jpg}}
-%   %   \subfloat{\includegraphics[height=3\baselineskip]{pictures/MPI-AEI_hoch_D_color_rgb-1.png}}\hspace*{0.06\textwidth}
-%   %   \subfloat{\includegraphics[height=3\baselineskip]{pictures/group_logo.png}}\hspace*{0.06\textwidth}
-%   %   \subfloat{\includegraphics[height=2.2\baselineskip]{pictures/logo_luh.jpg}}
-%   % \end{figure}
-%   % % \vbox{}
-%   \vfill
-%   \begingroup
-%     \begin{beamercolorbox}[sep=8pt,center,rounded=true,shadow=true]{title}
-%       \usebeamerfont{title}\inserttitle\par%
-%       \ifx\insertsubtitle\@empty%
-%       \else%
-%         \vskip0.25em%
-%         {\usebeamerfont{subtitle}\usebeamercolor[fg]{subtitle}\insertsubtitle\par}%
-%       \fi%     
-%     \end{beamercolorbox}%
-%     \vskip0.5em\par
-%     \begin{beamercolorbox}[sep=8pt,center]{author}
-%       \usebeamerfont{author}\insertauthor
-%     \end{beamercolorbox}
-%     \par
-%     \begin{beamercolorbox}[sep=8pt,center]{institute}
-%       \usebeamerfont{institute}\insertinstitute
-%     \end{beamercolorbox}
-%     \par
-%     \begin{beamercolorbox}[sep=8pt,center]{date}
-%       \usebeamerfont{date}\insertdate
-%     \end{beamercolorbox}\vskip0.5em
-%     {\usebeamercolor[fg]{titlegraphic}\inserttitlegraphic\par}
-%   \endgroup
-%   \vfill
-% }
+
+\def\themeGW@titlepage@leftskip{0.1\paperwidth}
+
+\defbeamertemplate{title page}{GW}{%
+    \begin{tikzpicture}[overlay,remember picture]%
+        % -- V1
+        % \fill[fg!50!bg] (current page.south) -- +(0.25\paperwidth, \paperheight) -- (current page.north east) -- (current page.south east) -- cycle;
+
+        
+        % -- V2
+        % \fill[bg] (current page.south west) -- +(0, 0.1\paperheight) -- +(\paperwidth, 0.2\paperheight) -- (current page.south east) -- cycle;
+        
+        % \fill[fg!50!bg] (current page.south) -- +(0.25\paperwidth, \paperheight) -- (current page.north east) -- (current page.south east) -- cycle;
 
 
-\titlegraphic{
-  \def\themeMPI@logoheight{1.8\baselineskip}
-  \def\themeMPI@logoboxwidth{0.28\paperwidth}
-  \begin{beamercolorbox}[center]{titlegraphic}%
-      \begin{minipage}{\themeMPI@logoboxwidth}%
-        \centering
-        \includegraphics[height=\themeMPI@logoheight]{logos/luh_logo_rgb_0_81_158.png}
-      \end{minipage}%
-      \begin{minipage}{\themeMPI@logoboxwidth}%
-        \centering
-        \includegraphics[height=\themeMPI@logoheight]{logos/group_logo.pdf}
-      \end{minipage}%
-      \begin{minipage}{\themeMPI@logoboxwidth}%
-        \centering
-        \includegraphics[height=\themeMPI@logoheight]{logos/MPI-AEI_wide_E_color_cmyk.pdf}
-      \end{minipage}%
-  \end{beamercolorbox}%
-}
-
-
-\defbeamertemplate{title page}{BMGroup}{%
-  \vfill%
-  \begingroup%
-    % \begin{tikzpicture}[overlay,remember picture]
-    %       \usebeamercolor[bg]{titlelike}
-    %       \fill (current page.north west) -- +(0, -0.5\paperheight) -- +(\paperwidth, -0.42\paperheight) -- (current page.north east) -- cycle;% I do not fully understand this. But anyway, it works...
-    % \end{tikzpicture}%
+        % -- V3, as none of the above go particularly well with the titlegraphics on the bottom
+        \fill[fg!50!bg] (current page.south east) -- +(-0.4\paperwidth, 0) -- +(-0.24\paperwidth, \paperheight) -- (current page.north east) -- (current page.south east) -- cycle;
+    
+        \node[anchor=south east,inner sep=0pt,draw=none,xshift=-10pt,yshift=10pt] at (current page.south east) {\pgfuseimage{logo}};
+    \end{tikzpicture}%
     % 
-    {\tikz[overlay,remember picture]\node[opacity=0.1] at (current page.center){\includegraphics[height=\paperheight]{logos/waves3.png}};}%
-    % {\tikz[overlay,remember picture]\node[opacity=0.1,anchor=south east] at (current page.south east){\includegraphics[height=0.5\paperheight,keepaspectratio]{logos/waves3.png}};}%
-    \vskip-4em\par%
-    \begin{beamercolorbox}[wd=\paperwidth,ht=0.333\paperheight,center,ignorebg]{title}%
+    \par%
+    \begin{beamercolorbox}[wd=\paperwidth,ht=0.333\paperheight,sep=8pt,leftskip=\themeGW@titlepage@leftskip,ignorebg]{title}%
       \usebeamerfont{title}\inserttitle\par%
       \ifx\insertsubtitle\@empty%
       \else%
@@ -187,99 +129,43 @@
         {\usebeamerfont{subtitle}\usebeamercolor[fg]{subtitle}\insertsubtitle\par}%
       \fi%     
     \end{beamercolorbox}%
-    \vskip5.5em\par%
-    \begin{beamercolorbox}[sep=8pt,center]{author}%
+    \vskip2.5em\par%
+    \begin{beamercolorbox}[wd=\paperwidth,sep=8pt,leftskip=\themeGW@titlepage@leftskip]{author}%
       \usebeamerfont{author}\insertauthor
     \end{beamercolorbox}%
     \par%
-    \begin{beamercolorbox}[sep=8pt,center]{institute}%
+    \begin{beamercolorbox}[wd=\paperwidth,sep=8pt,leftskip=\themeGW@titlepage@leftskip]{institute}%
       \usebeamerfont{institute}\insertinstitute
     \end{beamercolorbox}%
     \par%
-    \begin{beamercolorbox}[sep=8pt,center]{date}%
+    \begin{beamercolorbox}[wd=\paperwidth,sep=8pt,leftskip=\themeGW@titlepage@leftskip]{date}%
       \usebeamerfont{date}\insertdate
     \end{beamercolorbox}%
-    \vskip1.5em%
-    {\usebeamercolor[fg]{titlegraphic}\inserttitlegraphic\par}%
-    % 
-  \endgroup%
-  \vfill%
 }
 
 
 
-% \titlegraphic{
-%   \def\themeMPI@logoheight{1.8\baselineskip}
-%   \def\themeMPI@logoboxwidth{0.28\paperwidth}
-%   \begin{beamercolorbox}[center]{titlegraphic}%
-%       \begin{minipage}{\themeMPI@logoboxwidth}%
-%         \centering
-%         \includegraphics[height=\themeMPI@logoheight]{logos/luh_logo_rgb_0_81_158.png}
-%       \end{minipage}%
-%       \begin{minipage}{\themeMPI@logoboxwidth}%
-%         \centering
-%         \includegraphics[height=\themeMPI@logoheight]{logos/group_logo.pdf}
-%       \end{minipage}%
-%       \begin{minipage}{\themeMPI@logoboxwidth}%
-%         \centering
-%         \includegraphics[height=\themeMPI@logoheight]{logos/MPI-AEI_wide_E_neg_cmyk.pdf}
-%       \end{minipage}%
-%   \end{beamercolorbox}%
-% }
-
-% -- V2, with logos stacked on top
-% \titlegraphic{
-%   \def\themeMPI@logoheight{1.8\baselineskip}
-%   \def\themeMPI@logopadding{1.2\baselineskip}
-%   \def\themeMPI@logoboxwidth{0.28\paperwidth}
-%   \begin{beamercolorbox}[right]{titlegraphic}%
-%       \begin{minipage}{\themeMPI@logoboxwidth}%
-%         % \centering
-%         \raggedleft
-%         \includegraphics[height=\themeMPI@logoheight]{logos/group_logo.pdf}
-%       \end{minipage}
-%       \par
-%       \vspace*{\themeMPI@logopadding}
-%       \begin{minipage}{\themeMPI@logoboxwidth}%
-%         % \centering
-%         \raggedleft
-%         \includegraphics[height=\themeMPI@logoheight]{logos/luh_logo_rgb_0_81_158.png}
-%       \end{minipage}
-%       \par
-%       \vspace*{\themeMPI@logopadding}
-%       \begin{minipage}{\themeMPI@logoboxwidth}%
-%         % \centering
-%         \raggedleft
-%         \includegraphics[height=\themeMPI@logoheight]{logos/MPI-AEI_wide_E_neg_cmyk.pdf}
-%       \end{minipage}
-%   \end{beamercolorbox}%
-% }
-
-
-% -- V3, with reduced number of logos (sorry Frank)
 \titlegraphic{
-  \def\themeMPI@logoheight{1.8\baselineskip}
-  \def\themeMPI@logoboxwidth{0.3\paperwidth}
+  \def\themeGW@logoheight{1.8\baselineskip}
+  \def\themeGW@logoboxwidth{0.3\paperwidth}
   \begin{beamercolorbox}[center]{titlegraphic}%
-      \begin{minipage}{\themeMPI@logoboxwidth}%
+      \begin{minipage}{\themeGW@logoboxwidth}%
         % \centering
         \raggedleft
-        \includegraphics[height=\themeMPI@logoheight]{logos/luh_logo_rgb_0_81_158.png}
+        \includegraphics[height=\themeGW@logoheight]{logos/luh_logo_rgb_0_81_158.png}
       \end{minipage}%
-      \begin{minipage}{\themeMPI@logoboxwidth}%
+      \begin{minipage}{\themeGW@logoboxwidth}%
         \tikz[overlay, remember picture]{\node (0,0) {};}  % Just need to make it non-empty
       \end{minipage}%
-      \begin{minipage}{\themeMPI@logoboxwidth}%
+      \begin{minipage}{\themeGW@logoboxwidth}%
         \centering
-        \includegraphics[height=\themeMPI@logoheight]{logos/MPI-AEI_wide_E_neg_cmyk.pdf}
+        \includegraphics[height=\themeGW@logoheight]{logos/MPI-AEI_wide_E_neg_cmyk.pdf}
       \end{minipage}%
   \end{beamercolorbox}%
 }
 
 
-\def\themeMPI@titlepage@leftskip{0.1\paperwidth}
-
-\defbeamertemplate{title page}{MPI}{%
+\defbeamertemplate{title page}{MPIGrav}{%
     \begin{tikzpicture}[overlay,remember picture]%
         % -- V1
         % \fill[fg!50!bg] (current page.south) -- +(0.25\paperwidth, \paperheight) -- (current page.north east) -- (current page.south east) -- cycle;
@@ -305,7 +191,7 @@
     \end{tikzpicture}%
     % 
     \par%
-    \begin{beamercolorbox}[wd=\paperwidth,ht=0.333\paperheight,sep=8pt,leftskip=\themeMPI@titlepage@leftskip,ignorebg]{title}%
+    \begin{beamercolorbox}[wd=\paperwidth,ht=0.333\paperheight,sep=8pt,leftskip=\themeGW@titlepage@leftskip,ignorebg]{title}%
       \usebeamerfont{title}\inserttitle\par%
       \ifx\insertsubtitle\@empty%
       \else%
@@ -314,22 +200,22 @@
       \fi%     
     \end{beamercolorbox}%
     \vskip2.5em\par%
-    \begin{beamercolorbox}[wd=\paperwidth,sep=8pt,leftskip=\themeMPI@titlepage@leftskip]{author}%
+    \begin{beamercolorbox}[wd=\paperwidth,sep=8pt,leftskip=\themeGW@titlepage@leftskip]{author}%
       \usebeamerfont{author}\insertauthor
     \end{beamercolorbox}%
     \par%
-    \begin{beamercolorbox}[wd=\paperwidth,sep=8pt,leftskip=\themeMPI@titlepage@leftskip]{institute}%
+    \begin{beamercolorbox}[wd=\paperwidth,sep=8pt,leftskip=\themeGW@titlepage@leftskip]{institute}%
       \usebeamerfont{institute}\insertinstitute
     \end{beamercolorbox}%
     \par%
-    \begin{beamercolorbox}[wd=\paperwidth,sep=8pt,leftskip=\themeMPI@titlepage@leftskip]{date}%
+    \begin{beamercolorbox}[wd=\paperwidth,sep=8pt,leftskip=\themeGW@titlepage@leftskip]{date}%
       \usebeamerfont{date}\insertdate
     \end{beamercolorbox}%
 }
 
 
 % \setbeamertemplate{title page}[BMGroup]
-\setbeamertemplate{title page}[MPI]
+\setbeamertemplate{title page}[MPIGrav]
 
 
 \mode
