--- a/GWtheme/beamerthemeGW.sty
+++ b/GWtheme/beamerthemeGW.sty
@@ -10,8 +10,8 @@
 \useinnertheme{GW}
 % \usecolortheme{MPI}
 % \usecolortheme{MPIGrav}
-% \usecolortheme{MPIGravMixed}
-\usecolortheme{Caltech}
+\usecolortheme{MPIGravMixed}
+% \usecolortheme{Caltech}
 
 
 % -- Change spacing in document
